backend/app/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    DO
    FOR

Grammar

Rule 0     S' -> program
Rule 1     program -> statements
Rule 2     statements -> statements statement
Rule 3     statements -> statement
Rule 4     statement -> expression
Rule 5     statement -> function_definition
Rule 6     expression -> expression PLUS term
Rule 7     expression -> expression MINUS term
Rule 8     expression -> term MULTIPLICATION factor
Rule 9     expression -> term DIVIDE factor
Rule 10    factor -> VAR
Rule 11    factor -> VAR EQUALS expression
Rule 12    factor -> TRUE
Rule 13    factor -> FALSE
Rule 14    expression -> expression AND expression
Rule 15    expression -> expression OR expression
Rule 16    expression -> NOT expression
Rule 17    expression -> expression EQUALSEQUALS expression
Rule 18    expression -> expression GREATER expression
Rule 19    expression -> expression LESS expression
Rule 20    expression -> expression GREATEREQUALS expression
Rule 21    expression -> expression LESSEQUALS expression
Rule 22    expression -> expression NOTEQUALS expression
Rule 23    expression -> term
Rule 24    term -> factor
Rule 25    factor -> AND
Rule 26    factor -> OR
Rule 27    factor -> NOT
Rule 28    factor -> IF
Rule 29    factor -> ELIF
Rule 30    factor -> ELSE
Rule 31    factor -> INTNUMBER
Rule 32    factor -> FLOATNUMBER
Rule 33    factor -> STRING
Rule 34    factor -> COMMENT
Rule 35    factor -> SHOW LPAREN expression RPAREN
Rule 36    factor -> LPAREN expression RPAREN
Rule 37    factor -> LBRACE expression RBRACE
Rule 38    factor -> MINUS factor
Rule 39    if_statement -> IF LPAREN expression RPAREN LBRACE statements RBRACE elif_clauses else_clause
Rule 40    if_statement -> IF LPAREN expression RPAREN LBRACE statements RBRACE elif_clauses
Rule 41    if_statement -> IF LPAREN expression RPAREN LBRACE statements RBRACE else_clause
Rule 42    if_statement -> IF LPAREN expression RPAREN LBRACE statements RBRACE
Rule 43    elif_clauses -> ELIF LPAREN expression RPAREN LBRACE statements RBRACE elif_clauses
Rule 44    elif_clauses -> ELIF LPAREN expression RPAREN LBRACE statements RBRACE
Rule 45    else_clause -> ELSE LBRACE statements RBRACE
Rule 46    else_clause -> empty
Rule 47    empty -> <empty>
Rule 48    expression -> if_statement
Rule 49    expression -> VAR
Rule 50    expression -> error
Rule 51    function_definition -> FUNCTION VAR LPAREN parameters RPAREN LBRACE statements RBRACE
Rule 52    parameters -> VAR
Rule 53    parameters -> VAR COMMA parameters
Rule 54    parameters -> empty
Rule 55    arguments -> expression
Rule 56    arguments -> expression COMMA arguments
Rule 57    arguments -> empty
Rule 58    function_call -> VAR LPAREN arguments RPAREN
Rule 59    statement -> RETURN expression
Rule 60    factor -> function_call
Rule 61    statement -> WHILE LPAREN expression RPAREN LBRACE statements RBRACE

Terminals, with rules where they appear

AND                  : 14 25
COMMA                : 53 56
COMMENT              : 34
DIVIDE               : 9
DO                   : 
ELIF                 : 29 43 44
ELSE                 : 30 45
EQUALS               : 11
EQUALSEQUALS         : 17
FALSE                : 13
FLOATNUMBER          : 32
FOR                  : 
FUNCTION             : 51
GREATER              : 18
GREATEREQUALS        : 20
IF                   : 28 39 40 41 42
INTNUMBER            : 31
LBRACE               : 37 39 40 41 42 43 44 45 51 61
LESS                 : 19
LESSEQUALS           : 21
LPAREN               : 35 36 39 40 41 42 43 44 51 58 61
MINUS                : 7 38
MULTIPLICATION       : 8
NOT                  : 16 27
NOTEQUALS            : 22
OR                   : 15 26
PLUS                 : 6
RBRACE               : 37 39 40 41 42 43 44 45 51 61
RETURN               : 59
RPAREN               : 35 36 39 40 41 42 43 44 51 58 61
SHOW                 : 35
STRING               : 33
TRUE                 : 12
VAR                  : 10 11 49 51 52 53 58
WHILE                : 61
error                : 50

Nonterminals, with rules where they appear

arguments            : 56 58
elif_clauses         : 39 40 43
else_clause          : 39 41
empty                : 46 54 57
expression           : 4 6 7 11 14 14 15 15 16 17 17 18 18 19 19 20 20 21 21 22 22 35 36 37 39 40 41 42 43 44 55 56 59 61
factor               : 8 9 24 38
function_call        : 60
function_definition  : 5
if_statement         : 48
parameters           : 51 53
program              : 0
statement            : 2 3
statements           : 1 2 39 40 41 42 43 44 45 51 61
term                 : 6 7 8 9 23

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statements
    (2) statements -> . statements statement
    (3) statements -> . statement
    (4) statement -> . expression
    (5) statement -> . function_definition
    (59) statement -> . RETURN expression
    (61) statement -> . WHILE LPAREN expression RPAREN LBRACE statements RBRACE
    (6) expression -> . expression PLUS term
    (7) expression -> . expression MINUS term
    (8) expression -> . term MULTIPLICATION factor
    (9) expression -> . term DIVIDE factor
    (14) expression -> . expression AND expression
    (15) expression -> . expression OR expression
    (16) expression -> . NOT expression
    (17) expression -> . expression EQUALSEQUALS expression
    (18) expression -> . expression GREATER expression
    (19) expression -> . expression LESS expression
    (20) expression -> . expression GREATEREQUALS expression
    (21) expression -> . expression LESSEQUALS expression
    (22) expression -> . expression NOTEQUALS expression
    (23) expression -> . term
    (48) expression -> . if_statement
    (49) expression -> . VAR
    (50) expression -> . error
    (51) function_definition -> . FUNCTION VAR LPAREN parameters RPAREN LBRACE statements RBRACE
    (24) term -> . factor
    (39) if_statement -> . IF LPAREN expression RPAREN LBRACE statements RBRACE elif_clauses else_clause
    (40) if_statement -> . IF LPAREN expression RPAREN LBRACE statements RBRACE elif_clauses
    (41) if_statement -> . IF LPAREN expression RPAREN LBRACE statements RBRACE else_clause
    (42) if_statement -> . IF LPAREN expression RPAREN LBRACE statements RBRACE
    (10) factor -> . VAR
    (11) factor -> . VAR EQUALS expression
    (12) factor -> . TRUE
    (13) factor -> . FALSE
    (25) factor -> . AND
    (26) factor -> . OR
    (27) factor -> . NOT
    (28) factor -> . IF
    (29) factor -> . ELIF
    (30) factor -> . ELSE
    (31) factor -> . INTNUMBER
    (32) factor -> . FLOATNUMBER
    (33) factor -> . STRING
    (34) factor -> . COMMENT
    (35) factor -> . SHOW LPAREN expression RPAREN
    (36) factor -> . LPAREN expression RPAREN
    (37) factor -> . LBRACE expression RBRACE
    (38) factor -> . MINUS factor
    (60) factor -> . function_call
    (58) function_call -> . VAR LPAREN arguments RPAREN

    RETURN          shift and go to state 6
    WHILE           shift and go to state 7
    NOT             shift and go to state 15
    VAR             shift and go to state 17
    error           shift and go to state 18
    FUNCTION        shift and go to state 19
    IF              shift and go to state 20
    TRUE            shift and go to state 21
    FALSE           shift and go to state 22
    AND             shift and go to state 13
    OR              shift and go to state 14
    ELIF            shift and go to state 23
    ELSE            shift and go to state 24
    INTNUMBER       shift and go to state 25
    FLOATNUMBER     shift and go to state 26
    STRING          shift and go to state 27
    COMMENT         shift and go to state 28
    SHOW            shift and go to state 29
    LPAREN          shift and go to state 8
    LBRACE          shift and go to state 9
    MINUS           shift and go to state 11

    program                        shift and go to state 1
    statements                     shift and go to state 2
    statement                      shift and go to state 3
    expression                     shift and go to state 4
    function_definition            shift and go to state 5
    term                           shift and go to state 10
    factor                         shift and go to state 12
    if_statement                   shift and go to state 16
    function_call                  shift and go to state 30

state 1

    (0) S' -> program .



state 2

    (1) program -> statements .
    (2) statements -> statements . statement
    (4) statement -> . expression
    (5) statement -> . function_definition
    (59) statement -> . RETURN expression
    (61) statement -> . WHILE LPAREN expression RPAREN LBRACE statements RBRACE
    (6) expression -> . expression PLUS term
    (7) expression -> . expression MINUS term
    (8) expression -> . term MULTIPLICATION factor
    (9) expression -> . term DIVIDE factor
    (14) expression -> . expression AND expression
    (15) expression -> . expression OR expression
    (16) expression -> . NOT expression
    (17) expression -> . expression EQUALSEQUALS expression
    (18) expression -> . expression GREATER expression
    (19) expression -> . expression LESS expression
    (20) expression -> . expression GREATEREQUALS expression
    (21) expression -> . expression LESSEQUALS expression
    (22) expression -> . expression NOTEQUALS expression
    (23) expression -> . term
    (48) expression -> . if_statement
    (49) expression -> . VAR
    (50) expression -> . error
    (51) function_definition -> . FUNCTION VAR LPAREN parameters RPAREN LBRACE statements RBRACE
    (24) term -> . factor
    (39) if_statement -> . IF LPAREN expression RPAREN LBRACE statements RBRACE elif_clauses else_clause
    (40) if_statement -> . IF LPAREN expression RPAREN LBRACE statements RBRACE elif_clauses
    (41) if_statement -> . IF LPAREN expression RPAREN LBRACE statements RBRACE else_clause
    (42) if_statement -> . IF LPAREN expression RPAREN LBRACE statements RBRACE
    (10) factor -> . VAR
    (11) factor -> . VAR EQUALS expression
    (12) factor -> . TRUE
    (13) factor -> . FALSE
    (25) factor -> . AND
    (26) factor -> . OR
    (27) factor -> . NOT
    (28) factor -> . IF
    (29) factor -> . ELIF
    (30) factor -> . ELSE
    (31) factor -> . INTNUMBER
    (32) factor -> . FLOATNUMBER
    (33) factor -> . STRING
    (34) factor -> . COMMENT
    (35) factor -> . SHOW LPAREN expression RPAREN
    (36) factor -> . LPAREN expression RPAREN
    (37) factor -> . LBRACE expression RBRACE
    (38) factor -> . MINUS factor
    (60) factor -> . function_call
    (58) function_call -> . VAR LPAREN arguments RPAREN

    $end            reduce using rule 1 (program -> statements .)
    RETURN          shift and go to state 6
    WHILE           shift and go to state 7
    NOT             shift and go to state 15
    VAR             shift and go to state 17
    error           shift and go to state 18
    FUNCTION        shift and go to state 19
    IF              shift and go to state 20
    TRUE            shift and go to state 21
    FALSE           shift and go to state 22
    AND             shift and go to state 13
    OR              shift and go to state 14
    ELIF            shift and go to state 23
    ELSE            shift and go to state 24
    INTNUMBER       shift and go to state 25
    FLOATNUMBER     shift and go to state 26
    STRING          shift and go to state 27
    COMMENT         shift and go to state 28
    SHOW            shift and go to state 29
    LPAREN          shift and go to state 8
    LBRACE          shift and go to state 9
    MINUS           shift and go to state 11

    statement                      shift and go to state 31
    expression                     shift and go to state 4
    function_definition            shift and go to state 5
    term                           shift and go to state 10
    factor                         shift and go to state 12
    if_statement                   shift and go to state 16
    function_call                  shift and go to state 30

state 3

    (3) statements -> statement .

    RETURN          reduce using rule 3 (statements -> statement .)
    WHILE           reduce using rule 3 (statements -> statement .)
    NOT             reduce using rule 3 (statements -> statement .)
    VAR             reduce using rule 3 (statements -> statement .)
    error           reduce using rule 3 (statements -> statement .)
    FUNCTION        reduce using rule 3 (statements -> statement .)
    IF              reduce using rule 3 (statements -> statement .)
    TRUE            reduce using rule 3 (statements -> statement .)
    FALSE           reduce using rule 3 (statements -> statement .)
    AND             reduce using rule 3 (statements -> statement .)
    OR              reduce using rule 3 (statements -> statement .)
    ELIF            reduce using rule 3 (statements -> statement .)
    ELSE            reduce using rule 3 (statements -> statement .)
    INTNUMBER       reduce using rule 3 (statements -> statement .)
    FLOATNUMBER     reduce using rule 3 (statements -> statement .)
    STRING          reduce using rule 3 (statements -> statement .)
    COMMENT         reduce using rule 3 (statements -> statement .)
    SHOW            reduce using rule 3 (statements -> statement .)
    LPAREN          reduce using rule 3 (statements -> statement .)
    LBRACE          reduce using rule 3 (statements -> statement .)
    MINUS           reduce using rule 3 (statements -> statement .)
    $end            reduce using rule 3 (statements -> statement .)
    RBRACE          reduce using rule 3 (statements -> statement .)


state 4

    (4) statement -> expression .
    (6) expression -> expression . PLUS term
    (7) expression -> expression . MINUS term
    (14) expression -> expression . AND expression
    (15) expression -> expression . OR expression
    (17) expression -> expression . EQUALSEQUALS expression
    (18) expression -> expression . GREATER expression
    (19) expression -> expression . LESS expression
    (20) expression -> expression . GREATEREQUALS expression
    (21) expression -> expression . LESSEQUALS expression
    (22) expression -> expression . NOTEQUALS expression

  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for AND resolved as shift
  ! shift/reduce conflict for OR resolved as shift
    RETURN          reduce using rule 4 (statement -> expression .)
    WHILE           reduce using rule 4 (statement -> expression .)
    NOT             reduce using rule 4 (statement -> expression .)
    VAR             reduce using rule 4 (statement -> expression .)
    error           reduce using rule 4 (statement -> expression .)
    FUNCTION        reduce using rule 4 (statement -> expression .)
    IF              reduce using rule 4 (statement -> expression .)
    TRUE            reduce using rule 4 (statement -> expression .)
    FALSE           reduce using rule 4 (statement -> expression .)
    ELIF            reduce using rule 4 (statement -> expression .)
    ELSE            reduce using rule 4 (statement -> expression .)
    INTNUMBER       reduce using rule 4 (statement -> expression .)
    FLOATNUMBER     reduce using rule 4 (statement -> expression .)
    STRING          reduce using rule 4 (statement -> expression .)
    COMMENT         reduce using rule 4 (statement -> expression .)
    SHOW            reduce using rule 4 (statement -> expression .)
    LPAREN          reduce using rule 4 (statement -> expression .)
    LBRACE          reduce using rule 4 (statement -> expression .)
    $end            reduce using rule 4 (statement -> expression .)
    RBRACE          reduce using rule 4 (statement -> expression .)
    PLUS            shift and go to state 32
    MINUS           shift and go to state 33
    AND             shift and go to state 34
    OR              shift and go to state 35
    EQUALSEQUALS    shift and go to state 36
    GREATER         shift and go to state 37
    LESS            shift and go to state 38
    GREATEREQUALS   shift and go to state 39
    LESSEQUALS      shift and go to state 40
    NOTEQUALS       shift and go to state 41

  ! AND             [ reduce using rule 4 (statement -> expression .) ]
  ! OR              [ reduce using rule 4 (statement -> expression .) ]
  ! MINUS           [ reduce using rule 4 (statement -> expression .) ]


state 5

    (5) statement -> function_definition .

    RETURN          reduce using rule 5 (statement -> function_definition .)
    WHILE           reduce using rule 5 (statement -> function_definition .)
    NOT             reduce using rule 5 (statement -> function_definition .)
    VAR             reduce using rule 5 (statement -> function_definition .)
    error           reduce using rule 5 (statement -> function_definition .)
    FUNCTION        reduce using rule 5 (statement -> function_definition .)
    IF              reduce using rule 5 (statement -> function_definition .)
    TRUE            reduce using rule 5 (statement -> function_definition .)
    FALSE           reduce using rule 5 (statement -> function_definition .)
    AND             reduce using rule 5 (statement -> function_definition .)
    OR              reduce using rule 5 (statement -> function_definition .)
    ELIF            reduce using rule 5 (statement -> function_definition .)
    ELSE            reduce using rule 5 (statement -> function_definition .)
    INTNUMBER       reduce using rule 5 (statement -> function_definition .)
    FLOATNUMBER     reduce using rule 5 (statement -> function_definition .)
    STRING          reduce using rule 5 (statement -> function_definition .)
    COMMENT         reduce using rule 5 (statement -> function_definition .)
    SHOW            reduce using rule 5 (statement -> function_definition .)
    LPAREN          reduce using rule 5 (statement -> function_definition .)
    LBRACE          reduce using rule 5 (statement -> function_definition .)
    MINUS           reduce using rule 5 (statement -> function_definition .)
    $end            reduce using rule 5 (statement -> function_definition .)
    RBRACE          reduce using rule 5 (statement -> function_definition .)


state 6

    (59) statement -> RETURN . expression
    (6) expression -> . expression PLUS term
    (7) expression -> . expression MINUS term
    (8) expression -> . term MULTIPLICATION factor
    (9) expression -> . term DIVIDE factor
    (14) expression -> . expression AND expression
    (15) expression -> . expression OR expression
    (16) expression -> . NOT expression
    (17) expression -> . expression EQUALSEQUALS expression
    (18) expression -> . expression GREATER expression
    (19) expression -> . expression LESS expression
    (20) expression -> . expression GREATEREQUALS expression
    (21) expression -> . expression LESSEQUALS expression
    (22) expression -> . expression NOTEQUALS expression
    (23) expression -> . term
    (48) expression -> . if_statement
    (49) expression -> . VAR
    (50) expression -> . error
    (24) term -> . factor
    (39) if_statement -> . IF LPAREN expression RPAREN LBRACE statements RBRACE elif_clauses else_clause
    (40) if_statement -> . IF LPAREN expression RPAREN LBRACE statements RBRACE elif_clauses
    (41) if_statement -> . IF LPAREN expression RPAREN LBRACE statements RBRACE else_clause
    (42) if_statement -> . IF LPAREN expression RPAREN LBRACE statements RBRACE
    (10) factor -> . VAR
    (11) factor -> . VAR EQUALS expression
    (12) factor -> . TRUE
    (13) factor -> . FALSE
    (25) factor -> . AND
    (26) factor -> . OR
    (27) factor -> . NOT
    (28) factor -> . IF
    (29) factor -> . ELIF
    (30) factor -> . ELSE
    (31) factor -> . INTNUMBER
    (32) factor -> . FLOATNUMBER
    (33) factor -> . STRING
    (34) factor -> . COMMENT
    (35) factor -> . SHOW LPAREN expression RPAREN
    (36) factor -> . LPAREN expression RPAREN
    (37) factor -> . LBRACE expression RBRACE
    (38) factor -> . MINUS factor
    (60) factor -> . function_call
    (58) function_call -> . VAR LPAREN arguments RPAREN

    NOT             shift and go to state 15
    VAR             shift and go to state 17
    error           shift and go to state 18
    IF              shift and go to state 20
    TRUE            shift and go to state 21
    FALSE           shift and go to state 22
    AND             shift and go to state 13
    OR              shift and go to state 14
    ELIF            shift and go to state 23
    ELSE            shift and go to state 24
    INTNUMBER       shift and go to state 25
    FLOATNUMBER     shift and go to state 26
    STRING          shift and go to state 27
    COMMENT         shift and go to state 28
    SHOW            shift and go to state 29
    LPAREN          shift and go to state 8
    LBRACE          shift and go to state 9
    MINUS           shift and go to state 11

    expression                     shift and go to state 42
    term                           shift and go to state 10
    factor                         shift and go to state 12
    if_statement                   shift and go to state 16
    function_call                  shift and go to state 30

state 7

    (61) statement -> WHILE . LPAREN expression RPAREN LBRACE statements RBRACE

    LPAREN          shift and go to state 43


state 8

    (36) factor -> LPAREN . expression RPAREN
    (6) expression -> . expression PLUS term
    (7) expression -> . expression MINUS term
    (8) expression -> . term MULTIPLICATION factor
    (9) expression -> . term DIVIDE factor
    (14) expression -> . expression AND expression
    (15) expression -> . expression OR expression
    (16) expression -> . NOT expression
    (17) expression -> . expression EQUALSEQUALS expression
    (18) expression -> . expression GREATER expression
    (19) expression -> . expression LESS expression
    (20) expression -> . expression GREATEREQUALS expression
    (21) expression -> . expression LESSEQUALS expression
    (22) expression -> . expression NOTEQUALS expression
    (23) expression -> . term
    (48) expression -> . if_statement
    (49) expression -> . VAR
    (50) expression -> . error
    (24) term -> . factor
    (39) if_statement -> . IF LPAREN expression RPAREN LBRACE statements RBRACE elif_clauses else_clause
    (40) if_statement -> . IF LPAREN expression RPAREN LBRACE statements RBRACE elif_clauses
    (41) if_statement -> . IF LPAREN expression RPAREN LBRACE statements RBRACE else_clause
    (42) if_statement -> . IF LPAREN expression RPAREN LBRACE statements RBRACE
    (10) factor -> . VAR
    (11) factor -> . VAR EQUALS expression
    (12) factor -> . TRUE
    (13) factor -> . FALSE
    (25) factor -> . AND
    (26) factor -> . OR
    (27) factor -> . NOT
    (28) factor -> . IF
    (29) factor -> . ELIF
    (30) factor -> . ELSE
    (31) factor -> . INTNUMBER
    (32) factor -> . FLOATNUMBER
    (33) factor -> . STRING
    (34) factor -> . COMMENT
    (35) factor -> . SHOW LPAREN expression RPAREN
    (36) factor -> . LPAREN expression RPAREN
    (37) factor -> . LBRACE expression RBRACE
    (38) factor -> . MINUS factor
    (60) factor -> . function_call
    (58) function_call -> . VAR LPAREN arguments RPAREN

    NOT             shift and go to state 15
    VAR             shift and go to state 17
    error           shift and go to state 18
    IF              shift and go to state 20
    TRUE            shift and go to state 21
    FALSE           shift and go to state 22
    AND             shift and go to state 13
    OR              shift and go to state 14
    ELIF            shift and go to state 23
    ELSE            shift and go to state 24
    INTNUMBER       shift and go to state 25
    FLOATNUMBER     shift and go to state 26
    STRING          shift and go to state 27
    COMMENT         shift and go to state 28
    SHOW            shift and go to state 29
    LPAREN          shift and go to state 8
    LBRACE          shift and go to state 9
    MINUS           shift and go to state 11

    expression                     shift and go to state 44
    term                           shift and go to state 10
    factor                         shift and go to state 12
    if_statement                   shift and go to state 16
    function_call                  shift and go to state 30

state 9

    (37) factor -> LBRACE . expression RBRACE
    (6) expression -> . expression PLUS term
    (7) expression -> . expression MINUS term
    (8) expression -> . term MULTIPLICATION factor
    (9) expression -> . term DIVIDE factor
    (14) expression -> . expression AND expression
    (15) expression -> . expression OR expression
    (16) expression -> . NOT expression
    (17) expression -> . expression EQUALSEQUALS expression
    (18) expression -> . expression GREATER expression
    (19) expression -> . expression LESS expression
    (20) expression -> . expression GREATEREQUALS expression
    (21) expression -> . expression LESSEQUALS expression
    (22) expression -> . expression NOTEQUALS expression
    (23) expression -> . term
    (48) expression -> . if_statement
    (49) expression -> . VAR
    (50) expression -> . error
    (24) term -> . factor
    (39) if_statement -> . IF LPAREN expression RPAREN LBRACE statements RBRACE elif_clauses else_clause
    (40) if_statement -> . IF LPAREN expression RPAREN LBRACE statements RBRACE elif_clauses
    (41) if_statement -> . IF LPAREN expression RPAREN LBRACE statements RBRACE else_clause
    (42) if_statement -> . IF LPAREN expression RPAREN LBRACE statements RBRACE
    (10) factor -> . VAR
    (11) factor -> . VAR EQUALS expression
    (12) factor -> . TRUE
    (13) factor -> . FALSE
    (25) factor -> . AND
    (26) factor -> . OR
    (27) factor -> . NOT
    (28) factor -> . IF
    (29) factor -> . ELIF
    (30) factor -> . ELSE
    (31) factor -> . INTNUMBER
    (32) factor -> . FLOATNUMBER
    (33) factor -> . STRING
    (34) factor -> . COMMENT
    (35) factor -> . SHOW LPAREN expression RPAREN
    (36) factor -> . LPAREN expression RPAREN
    (37) factor -> . LBRACE expression RBRACE
    (38) factor -> . MINUS factor
    (60) factor -> . function_call
    (58) function_call -> . VAR LPAREN arguments RPAREN

    NOT             shift and go to state 15
    VAR             shift and go to state 17
    error           shift and go to state 18
    IF              shift and go to state 20
    TRUE            shift and go to state 21
    FALSE           shift and go to state 22
    AND             shift and go to state 13
    OR              shift and go to state 14
    ELIF            shift and go to state 23
    ELSE            shift and go to state 24
    INTNUMBER       shift and go to state 25
    FLOATNUMBER     shift and go to state 26
    STRING          shift and go to state 27
    COMMENT         shift and go to state 28
    SHOW            shift and go to state 29
    LPAREN          shift and go to state 8
    LBRACE          shift and go to state 9
    MINUS           shift and go to state 11

    expression                     shift and go to state 45
    term                           shift and go to state 10
    factor                         shift and go to state 12
    if_statement                   shift and go to state 16
    function_call                  shift and go to state 30

state 10

    (8) expression -> term . MULTIPLICATION factor
    (9) expression -> term . DIVIDE factor
    (23) expression -> term .

  ! shift/reduce conflict for MULTIPLICATION resolved as shift
  ! shift/reduce conflict for DIVIDE resolved as shift
    MULTIPLICATION  shift and go to state 46
    DIVIDE          shift and go to state 47
    PLUS            reduce using rule 23 (expression -> term .)
    MINUS           reduce using rule 23 (expression -> term .)
    AND             reduce using rule 23 (expression -> term .)
    OR              reduce using rule 23 (expression -> term .)
    EQUALSEQUALS    reduce using rule 23 (expression -> term .)
    GREATER         reduce using rule 23 (expression -> term .)
    LESS            reduce using rule 23 (expression -> term .)
    GREATEREQUALS   reduce using rule 23 (expression -> term .)
    LESSEQUALS      reduce using rule 23 (expression -> term .)
    NOTEQUALS       reduce using rule 23 (expression -> term .)
    RETURN          reduce using rule 23 (expression -> term .)
    WHILE           reduce using rule 23 (expression -> term .)
    NOT             reduce using rule 23 (expression -> term .)
    VAR             reduce using rule 23 (expression -> term .)
    error           reduce using rule 23 (expression -> term .)
    FUNCTION        reduce using rule 23 (expression -> term .)
    IF              reduce using rule 23 (expression -> term .)
    TRUE            reduce using rule 23 (expression -> term .)
    FALSE           reduce using rule 23 (expression -> term .)
    ELIF            reduce using rule 23 (expression -> term .)
    ELSE            reduce using rule 23 (expression -> term .)
    INTNUMBER       reduce using rule 23 (expression -> term .)
    FLOATNUMBER     reduce using rule 23 (expression -> term .)
    STRING          reduce using rule 23 (expression -> term .)
    COMMENT         reduce using rule 23 (expression -> term .)
    SHOW            reduce using rule 23 (expression -> term .)
    LPAREN          reduce using rule 23 (expression -> term .)
    LBRACE          reduce using rule 23 (expression -> term .)
    $end            reduce using rule 23 (expression -> term .)
    RBRACE          reduce using rule 23 (expression -> term .)
    RPAREN          reduce using rule 23 (expression -> term .)
    COMMA           reduce using rule 23 (expression -> term .)

  ! MULTIPLICATION  [ reduce using rule 23 (expression -> term .) ]
  ! DIVIDE          [ reduce using rule 23 (expression -> term .) ]


state 11

    (38) factor -> MINUS . factor
    (10) factor -> . VAR
    (11) factor -> . VAR EQUALS expression
    (12) factor -> . TRUE
    (13) factor -> . FALSE
    (25) factor -> . AND
    (26) factor -> . OR
    (27) factor -> . NOT
    (28) factor -> . IF
    (29) factor -> . ELIF
    (30) factor -> . ELSE
    (31) factor -> . INTNUMBER
    (32) factor -> . FLOATNUMBER
    (33) factor -> . STRING
    (34) factor -> . COMMENT
    (35) factor -> . SHOW LPAREN expression RPAREN
    (36) factor -> . LPAREN expression RPAREN
    (37) factor -> . LBRACE expression RBRACE
    (38) factor -> . MINUS factor
    (60) factor -> . function_call
    (58) function_call -> . VAR LPAREN arguments RPAREN

    VAR             shift and go to state 49
    TRUE            shift and go to state 21
    FALSE           shift and go to state 22
    AND             shift and go to state 13
    OR              shift and go to state 14
    NOT             shift and go to state 50
    IF              shift and go to state 51
    ELIF            shift and go to state 23
    ELSE            shift and go to state 24
    INTNUMBER       shift and go to state 25
    FLOATNUMBER     shift and go to state 26
    STRING          shift and go to state 27
    COMMENT         shift and go to state 28
    SHOW            shift and go to state 29
    LPAREN          shift and go to state 8
    LBRACE          shift and go to state 9
    MINUS           shift and go to state 11

    factor                         shift and go to state 48
    function_call                  shift and go to state 30

state 12

    (24) term -> factor .

    MULTIPLICATION  reduce using rule 24 (term -> factor .)
    DIVIDE          reduce using rule 24 (term -> factor .)
    PLUS            reduce using rule 24 (term -> factor .)
    MINUS           reduce using rule 24 (term -> factor .)
    AND             reduce using rule 24 (term -> factor .)
    OR              reduce using rule 24 (term -> factor .)
    EQUALSEQUALS    reduce using rule 24 (term -> factor .)
    GREATER         reduce using rule 24 (term -> factor .)
    LESS            reduce using rule 24 (term -> factor .)
    GREATEREQUALS   reduce using rule 24 (term -> factor .)
    LESSEQUALS      reduce using rule 24 (term -> factor .)
    NOTEQUALS       reduce using rule 24 (term -> factor .)
    RETURN          reduce using rule 24 (term -> factor .)
    WHILE           reduce using rule 24 (term -> factor .)
    NOT             reduce using rule 24 (term -> factor .)
    VAR             reduce using rule 24 (term -> factor .)
    error           reduce using rule 24 (term -> factor .)
    FUNCTION        reduce using rule 24 (term -> factor .)
    IF              reduce using rule 24 (term -> factor .)
    TRUE            reduce using rule 24 (term -> factor .)
    FALSE           reduce using rule 24 (term -> factor .)
    ELIF            reduce using rule 24 (term -> factor .)
    ELSE            reduce using rule 24 (term -> factor .)
    INTNUMBER       reduce using rule 24 (term -> factor .)
    FLOATNUMBER     reduce using rule 24 (term -> factor .)
    STRING          reduce using rule 24 (term -> factor .)
    COMMENT         reduce using rule 24 (term -> factor .)
    SHOW            reduce using rule 24 (term -> factor .)
    LPAREN          reduce using rule 24 (term -> factor .)
    LBRACE          reduce using rule 24 (term -> factor .)
    $end            reduce using rule 24 (term -> factor .)
    RBRACE          reduce using rule 24 (term -> factor .)
    RPAREN          reduce using rule 24 (term -> factor .)
    COMMA           reduce using rule 24 (term -> factor .)


state 13

    (25) factor -> AND .

    MULTIPLICATION  reduce using rule 25 (factor -> AND .)
    DIVIDE          reduce using rule 25 (factor -> AND .)
    PLUS            reduce using rule 25 (factor -> AND .)
    MINUS           reduce using rule 25 (factor -> AND .)
    AND             reduce using rule 25 (factor -> AND .)
    OR              reduce using rule 25 (factor -> AND .)
    EQUALSEQUALS    reduce using rule 25 (factor -> AND .)
    GREATER         reduce using rule 25 (factor -> AND .)
    LESS            reduce using rule 25 (factor -> AND .)
    GREATEREQUALS   reduce using rule 25 (factor -> AND .)
    LESSEQUALS      reduce using rule 25 (factor -> AND .)
    NOTEQUALS       reduce using rule 25 (factor -> AND .)
    RETURN          reduce using rule 25 (factor -> AND .)
    WHILE           reduce using rule 25 (factor -> AND .)
    NOT             reduce using rule 25 (factor -> AND .)
    VAR             reduce using rule 25 (factor -> AND .)
    error           reduce using rule 25 (factor -> AND .)
    FUNCTION        reduce using rule 25 (factor -> AND .)
    IF              reduce using rule 25 (factor -> AND .)
    TRUE            reduce using rule 25 (factor -> AND .)
    FALSE           reduce using rule 25 (factor -> AND .)
    ELIF            reduce using rule 25 (factor -> AND .)
    ELSE            reduce using rule 25 (factor -> AND .)
    INTNUMBER       reduce using rule 25 (factor -> AND .)
    FLOATNUMBER     reduce using rule 25 (factor -> AND .)
    STRING          reduce using rule 25 (factor -> AND .)
    COMMENT         reduce using rule 25 (factor -> AND .)
    SHOW            reduce using rule 25 (factor -> AND .)
    LPAREN          reduce using rule 25 (factor -> AND .)
    LBRACE          reduce using rule 25 (factor -> AND .)
    $end            reduce using rule 25 (factor -> AND .)
    RBRACE          reduce using rule 25 (factor -> AND .)
    RPAREN          reduce using rule 25 (factor -> AND .)
    COMMA           reduce using rule 25 (factor -> AND .)


state 14

    (26) factor -> OR .
